--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 h2 {
-    margin-top: 50px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+h3 {
+    padding: 20px;
 }
 
 /* Container holding the image and the text */
@@ -8,7 +13,7 @@ h2 {
   }
   
   /* Bottom right text */
-  .text-block {
+.text-block {
     position: absolute;
     bottom: 20px;
     right: 20px;
@@ -17,3 +22,13 @@ h2 {
     padding-left: 20px;
     padding-right: 20px;
   }
+
+.site-footer {
+    background-image: linear-gradient(gray, white);
+}
+
+.row-content {
+    padding: 25px 0;
+    border-bottom: 1px ridge;
+    min-height: 200px;
+}
