--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+h1 {
+    padding: 25px;
+    font-size: 75px;
+}
+
 h2 {
     margin-top: 20px;
     padding: 20px;
@@ -39,20 +44,53 @@ h3 {
     min-height: 200px;
 }
 
-  .bottom-right {
+.bottom-right {
     position: absolute;
     bottom: 8px;
     right: 30px;
-  }
+}
 
-  .bottom-far-right {
+.bottom-far-right {
     position: absolute;
-    bottom: 8px;
-    right: 130px;
-  }
+    bottom: -30px;
+    right: 85px;
+}
 
-  .top-right {
+.top-right {
     position: absolute;
     top: 8px;
-    right: 130px;
-  }
+    right: 85px;
+}
+
+.center {
+    text-align: center;
+}
+
+.padding-top{
+      padding-top: 30px;
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+
+/*
+Forces carousel image to be 100% width and not max width of 100%
+*/
+.carousel-item .img-fluid {
+    width:100%;
+    height:100%;
+}
+
+.carousel-inner{
+    width:100%;
+    max-height: 600px !important;
+}
+
+.jumbotron {
+    margin: 0;
+    padding: 0px;
+    color: black; 
+    text-align: center;
+    background: transparent;
+}
