--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,9 @@ h2 {
 }
 
 h3 {
+    margin-top: 20px;
     padding: 20px;
+    
 }
 
 h4 {
@@ -77,7 +79,7 @@ h4 {
 
 .bottom-centered {
     position: absolute;
-    bottom: 0%;
+    bottom: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -119,3 +121,10 @@ Forces carousel image to be 100% width and not max width of 100%
     background: transparent;
 }
 
+#mouse_over {
+    opacity: 0;
+  }
+  
+  #mouse_over:hover {
+    opacity: 1;
+  }
